--- a/UpaayBackend/UppayBackendService/UpaayBackendService.Application/UpaayBackendService.Application.csproj
+++ b/UpaayBackend/UppayBackendService/UpaayBackendService.Application/UpaayBackendService.Application.csproj
@@ -1,14 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="IServices\" />
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\UpaayBackendService.DAL\UpaayBackendService.DAL.csproj" />
+    <ProjectReference Include="..\UpaayBackendService.Shared.Models\UpaayBackendService.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Response\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
