--- a/UpaayBackend/UppayBackendService/UpaayBackendService.Host/UpaayBackendService.Host.csproj
+++ b/UpaayBackend/UppayBackendService/UpaayBackendService.Host/UpaayBackendService.Host.csproj
@@ -1,24 +1,24 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.20">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\UpaayBackendService.Application\UpaayBackendService.Application.csproj" />
-    <ProjectReference Include="..\UpaayBackendService.Host\UpaayBackendService.Host.csproj" />
-    <ProjectReference Include="..\UpaayBackendService.Shared.Models\UpaayBackendService.Shared.csproj" />
+    <ProjectReference Include="..\UpaayBackendService.DAL\UpaayBackendService.DAL.csproj" />
   </ItemGroup>
 
 </Project>
