refresh token setup

--- a/UpaayBackend/UppayBackendService/UpaayBackendService.API/appsettings.json
+++ b/UpaayBackend/UppayBackendService/UpaayBackendService.API/appsettings.json
@@ -9,6 +9,13 @@
 
     "ConnectionStrings": {
         "DefaultConnection": "Server=ADD_YOUR_SERVER;Database=Upaay;User Id=YOURUSERNAME;Password=YOURPASSWORD;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    },
+
+    "JwtSettings": {
+        "SecretKey": "MyUltraSecureLongSecretKey_@2025$!!%Secure",
+        "Issuer": "yourdomain.com",
+        "Audience": "yourdomain.com",
+        "TokenExpiryInMinutes": 60
     }
 
 
