--- a/UpaayBackend/UppayBackendService/UpaayBackendService.API/appsettings.json
+++ b/UpaayBackend/UppayBackendService/UpaayBackendService.API/appsettings.json
@@ -8,7 +8,7 @@
     "AllowedHosts": "*",
 
     "ConnectionStrings": {
-        "DefaultConnection": "Server=ADD_YOUR_SERVER;Database=Upaay;User Id=YOURUSERNAME;Password=YOURPASSWORD;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+        "DefaultConnection": "Server=EPINPUNW08A3;Database=Upaay;User Id=sa;Password=Micr0@11DN;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
     },
 
     "JwtSettings": {
@@ -16,6 +16,9 @@
         "Issuer": "yourdomain.com",
         "Audience": "yourdomain.com",
         "TokenExpiryInMinutes": 60
+    },
+    "OtpSettings": {
+        "MaxAttempts" : 3
     }
 
 
