login ui created

--- a/UpaayMutualApp/app.json
+++ b/UpaayMutualApp/app.json
@@ -15,7 +15,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.coder_chandan.UpaayMutualApp"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +37,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "6ce1a7ae-1623-44ee-a128-82d7a14111b7"
+      }
     }
   }
 }
