Send OTP through email

--- a/UpaayBackend/UppayBackendService/UpaayBackendService.API/appsettings.Development.json
+++ b/UpaayBackend/UppayBackendService/UpaayBackendService.API/appsettings.Development.json
@@ -1,8 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=ADD_YOUR_SERVER;Database=Upaay;User Id=YOURUSERNAME;Password=YOURPASSWORD;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    },
+    "JwtSettings": {
+        "SecretKey": "MyUltraSecureLongSecretKey_@2025$!!%Secure",
+        "Issuer": "yourdomain.com",
+        "Audience": "yourdomain.com",
+        "TokenExpiryInMinutes": 60
+    },
+    "OtpSettings": {
+        "MaxAttempts": 3
+    },
+    "EmailConfigurations": {
+        "server": "server_name",
+        "port": 587,
+        "emailId": "your_email_id",
+        "password": "your_password"
     }
-  }
 }
