--- a/UpaayBackend/UppayBackendService/UpaayBackendService.API/UpaayBackendService.API.csproj
+++ b/UpaayBackend/UppayBackendService/UpaayBackendService.API/UpaayBackendService.API.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="appsettings.Development.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.20">
       <PrivateAssets>all</PrivateAssets>
