--- a/UpaayBackend/UppayBackendService/UpaayBackendService.API/appsettings.json
+++ b/UpaayBackend/UppayBackendService/UpaayBackendService.API/appsettings.json
@@ -6,11 +6,9 @@
         }
     },
     "AllowedHosts": "*",
-
     "ConnectionStrings": {
         "DefaultConnection": "Server=ADD_YOUR_SERVER;Database=Upaay;User Id=YOURUSERNAME;Password=YOURPASSWORD;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
     },
-
     "JwtSettings": {
         "SecretKey": "MyUltraSecureLongSecretKey_@2025$!!%Secure",
         "Issuer": "yourdomain.com",
@@ -18,9 +16,12 @@
         "TokenExpiryInMinutes": 60
     },
     "OtpSettings": {
-        "MaxAttempts" : 3
+        "MaxAttempts": 3
+    },
+    "EmailConfigurations": {
+        "server": "server_name",
+        "port": 587,
+        "emailId": "your_email_id",
+        "password": "your_password"
     }
-
-
-
 }
