--- a/UpaayBackend/UppayBackendService/UpaayBackendService.Application/UpaayBackendService.Application.csproj
+++ b/UpaayBackend/UppayBackendService/UpaayBackendService.Application/UpaayBackendService.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UpaayBackendService.DAL\UpaayBackendService.DAL.csproj" />
+    <ProjectReference Include="..\UpaayBackendService.MessagingService\UpaayBackendService.MessagingService.csproj" />
     <ProjectReference Include="..\UpaayBackendService.Shared.Models\UpaayBackendService.Shared.csproj" />
   </ItemGroup>
 
