--- a/UpaayMutualApp/package.json
+++ b/UpaayMutualApp/package.json
@@ -56,9 +56,9 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.5",
+    "lightningcss": "^1.29.1",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3",
-    "lightningcss": "^1.29.1"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
